@@ -82,6 +82,7 @@ from Products.PloneMeeting.config import ITEM_ICON_COLORS
 from Products.PloneMeeting.config import ITEMTEMPLATESMANAGERS_GROUP_SUFFIX
 from Products.PloneMeeting.config import MEETING_CONFIG
 from Products.PloneMeeting.config import MEETING_GROUP_SUFFIXES
+from Products.PloneMeeting.config import MEETING_STATES_ACCEPTING_ITEMS
 from Products.PloneMeeting.config import MEETINGMANAGERS_GROUP_SUFFIX
 from Products.PloneMeeting.config import MEETINGROLES
 from Products.PloneMeeting.config import NO_TRIGGER_WF_TRANSITION_UNTIL
@@ -5874,10 +5875,6 @@ class MeetingConfig(OrderedBaseFolder, BrowserDefaultMixin):
                 alsoProvides(subFolderObj, IBatchActionsMarker)
                 subFolderObj.reindexObject()
 
-    def getMeetingsAcceptingItemsAdditionalManagerStates(self):
-        '''See doc in interfaces.py.'''
-        return ('decided', 'published', 'decisions_published')
-
     def getMeetingsAcceptingItems_cachekey(method, self, review_states=('created', 'frozen'), inTheFuture=False):
         '''cachekey method for self.getMeetingsAcceptingItems.'''
         return (self, str(self.REQUEST._debug), review_states, inTheFuture)
@@ -5891,7 +5888,7 @@ class MeetingConfig(OrderedBaseFolder, BrowserDefaultMixin):
         # he is able to add a meetingitem to a 'decided' meeting.
         # except if we specifically restricted given p_review_states.
         if review_states == ('created', 'frozen') and tool.isManager(self):
-            review_states += self.adapted().getMeetingsAcceptingItemsAdditionalManagerStates()
+            review_states += MEETING_STATES_ACCEPTING_ITEMS
 
         query = {'portal_type': self.getMeetingTypeName(),
                  'review_state': review_states,
